# home-temporary-chat

./: .gitignore  README.md  config.yaml  pyproject.toml  server.py  setup.sh
static/: chat.js  crypto.js  style.css
templates/: chat.html  login.html
